--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         body {
             margin: 0;
             background: #000;
-            color: #e3c26f; /* gold */
+            color: #e3c26f;
             font-family: 'Helvetica Neue', Arial, sans-serif;
             line-height: 1.7;
         }
@@ -55,10 +55,41 @@
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(227,194,111,0.4);
             transition: transform .3s;
+            cursor: pointer;
         }
 
         .gallery img:hover {
             transform: scale(1.05);
+        }
+
+        /* LIGHTBOX */
+        #lightbox {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0,0,0,0.9);
+            justify-content: center;
+            align-items: center;
+            z-index: 999;
+        }
+
+        #lightbox img {
+            max-width: 90%;
+            max-height: 90%;
+            border: 3px solid #e3c26f;
+            border-radius: 10px;
+        }
+
+        #close {
+            position: absolute;
+            top: 20px;
+            right: 40px;
+            font-size: 40px;
+            color: #e3c26f;
+            cursor: pointer;
         }
 
         /* FORM */
@@ -97,7 +128,6 @@
             border-top: 1px solid #e3c26f;
         }
 
-        /* SMOOTH SCROLLING */
         html {
             scroll-behavior: smooth;
         }
@@ -116,16 +146,16 @@
 <!-- HOME -->
 <section id="home">
     <h1>Men's Luxury Fashion</h1>
-    <p>Welcome to the world of luxury menswear — where craftsmanship meets sophistication. From tailored suits to elegant accessories, this guide showcases the essence of high-end men’s fashion.</p>
+    <p>Welcome to the world of luxury menswear — where craftsmanship meets sophistication.</p>
 </section>
 
 <!-- GALLERY -->
 <section id="gallery">
     <h2>Luxury Suit Collection</h2>
     <div class="gallery">
-        <img src="https://images.unsplash.com/photo-1507679799987-c73779587ccf" alt="Luxury Suit 1">
-        <img src="suit2.jpg" alt="Luxury Suit 2">
-        <img src="suit3.jpg" alt="Luxury Suit 3">
+        <img src="https://images.unsplash.com/photo-1507679799987-c73779587ccf" class="lightbox-img" alt="Luxury Suit 1">
+        <img src="suit2.jpg" class="lightbox-img" alt="Luxury Suit 2">
+        <img src="suit3.jpg" class="lightbox-img" alt="Luxury Suit 3">
     </div>
 </section>
 
@@ -162,5 +192,12 @@
     <p>© 2025 Men's Luxury Fashion Guide. Elegance Meets Excellence.</p>
 </footer>
 
+<!-- LIGHTBOX HTML -->
+<div id="lightbox">
+    <span id="close">&times;</span>
+    <img id="lightbox-img">
+</div>
+
+<script src="script.js"></script>
 </body>
 </html>
